# alvuelo

./: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
src/: App.tsx  constants.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/components/: TrafficLights.tsx
src/components/ui/: chat.tsx
src/integration/openai/: client.ts
src/integration/storage/: secrets.ts
