[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-stronghold = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri = { version = "2", features = [ "macos-private-api", "protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2.0.0"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
thiserror = "1.0.63"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# [target.'cfg(target_os = "linux")'.dependencies]
# zbus = "3.6.0"
# gnome-dbus-api = "1.1.1"

# [target.'cfg(target_os = "macos")'.dependencies]
# objc = "0.2"
# cocoa = "0.24"



[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
